# beman-net

./: CMakeLists.txt  Makefile  README.md
.github/: CODEOWNERS
.github/workflows/: linux.yml  macos.yml
examples/: CMakeLists.txt  client.cpp  cppcon-2024.cpp  demo_algorithm.hpp  demo_error.hpp  demo_scope.hpp  demo_task.hpp  empty.cpp  http-server.cpp  milano.cpp  server.cpp  task.cpp
include/beman/net/: net.hpp
include/beman/net/detail/: basic_socket.hpp  basic_socket_acceptor.hpp  basic_stream_socket.hpp  buffer.hpp  container.hpp  context_base.hpp  endpoint.hpp  event_type.hpp  execution.hpp  internet.hpp  io_base.hpp  io_context.hpp  io_context_scheduler.hpp  netfwd.hpp  operations.hpp  poll_context.hpp  sender.hpp  socket_base.hpp  socket_category.hpp  sorted_list.hpp  stop_token.hpp  timer.hpp
include/beman/net29/: net.hpp
src/beman/net/: CMakeLists.txt  net.cpp
src/beman/net29/: CMakeLists.txt
tests/beman/net/: CMakeLists.txt  sorted_list.pass.cpp
